@@ -1,3 +1,8 @@
+2012-12-26  JJ Allaire <jj@rstudio.org>
+
+        * R/Attributes.R: return invisibly from void functions
+        * src/attributes.cpp: return invisibly from void functions
+
 2012-12-20 Romain Francois <romain@r-enthusiasts.com>
 
         * NAMESPACE : remove C++ObjectS3 and C++ClassRepresentation classes
